# codewizard

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.example.json  project_context.md  vcpkg.json
.github/workflows/: ci.yml
docs/: ai_usage.md  architecture.md
src/: main.cpp
src/app/: window_frame.cpp  window_frame.hpp
src/core/: app_config.cpp  app_config.hpp  chunker.cpp  chunker.hpp  embeddings_client.cpp  embeddings_client.hpp  file_scanner.cpp  file_scanner.hpp  http_client.cpp  http_client.hpp  indexer.cpp  indexer.hpp  llm_client.cpp  llm_client.hpp  prompt_builder.cpp  prompt_builder.hpp  rag_pipeline.cpp  rag_pipeline.hpp  retriever.cpp  retriever.hpp  types.hpp  vector_store.cpp  vector_store.hpp
tests/: core_tests.cpp
